--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,12 @@
 Package: nurser
-Title: What the Package Does (One Line, Title Case)
+Title: Make EDA process
 Version: 0.0.0.9000
 Authors@R: 
     person(given = "Merve",
            family = "Sahin",
            role = c("aut", "cre"),
-           email = "kymerve16@gmail.com",
-           comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+           email = "kymerve16@gmail.com")
+Description: Making visualisation of the features, detecting the outliers and applying preproccesing.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
