--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,6 @@ Description: Making visualisation of the features, detecting the outliers and ap
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.0.2
+Suggests: 
+    testthat
