--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,3 +13,9 @@ LazyData: true
 RoxygenNote: 7.0.2
 Suggests: 
     testthat (>= 2.1.0)
+Imports: 
+    stats,
+    Hmisc,
+    mi,
+    mice,
+    missForest
