--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,7 +12,8 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.0.2
 Suggests: 
-    testthat (>= 2.1.0)
+    testthat (>= 2.1.0),
+    covr
 Imports: 
     stats,
     Hmisc,
@@ -22,3 +23,5 @@ Imports:
     dplyr,
     fastDummies,
     tibble
+URL: https://github.com/UBC-MDS/nurser
+BugReports: https://github.com/UBC-MDS/nurser/issues
