--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,9 @@ LazyData: true
 RoxygenNote: 7.0.2
 Suggests: 
     testthat (>= 2.1.0),
-    covr
+    covr,
+    knitr,
+    rmarkdown
 Imports: 
     stats,
     Hmisc,
@@ -25,3 +27,4 @@ Imports:
     tibble
 URL: https://github.com/UBC-MDS/nurser
 BugReports: https://github.com/UBC-MDS/nurser/issues
+VignetteBuilder: knitr
